@@ -37,7 +37,7 @@ $: title = $conversation.title;
 $: if (!$route.hash && !$conversation.historyStopAt) conversation.load({});
 
 $: onInfinityScrolled = chatHelper('onInfinityScrolled', {conversation});
-$: onInfinityVisibility = chatHelper('onInfinityVisibility', {messages, onLoadHash});
+$: onInfinityVisibility = chatHelper('onInfinityVisibility', {conversation, onLoadHash});
 $: onVideoLinkClick = chatHelper('onVideoLinkClick', {conversation, user});
 $: onMessageClick = chatHelper('onMessageClick', {conversation, user});
 
