@@ -2,6 +2,7 @@ Revision history for perl distribution Convos
 
 5.23 Not Released
  - Fix hover to show timestamp for message
+ - Fix loading more messages if scrollbar is not seen #558
 
 5.22 2021-02-10T10:09:00+0900
  - Add support for nicer message-of-the-day (MOTD) server messages
